# rox2026-lazytatzv

./: .clang-format  .gitignore  .gitmodules  Dockerfile  README.md  compose.yaml  docker-compose.yml  mecanum_rc.py
.github/workflows/: check_lazytatzv.yml  ros2_ci.yml
lazytatzv_ws/: .dockerignore  Dockerfile  README.md  compose.yaml  fix_style.sh  motor_test_tool.py
lazytatzv_ws/src/at_motor_driver/: CMakeLists.txt  package.xml
lazytatzv_ws/src/at_motor_driver/include/at_motor_driver/: at_bus_gateway.hpp  at_motor_driver_node.hpp  at_motor_node.hpp  motor_controller.hpp
lazytatzv_ws/src/at_motor_driver/src/: at_bus_gateway.cpp  at_motor_driver_node.cpp  at_motor_node.cpp  motor_controller.cpp
lazytatzv_ws/src/base_teleop/: package.xml
lazytatzv_ws/src/base_teleop/include/base_teleop/: base_teleop_node.hpp
lazytatzv_ws/src/base_teleop/src/: base_teleop_node.cpp
lazytatzv_ws/src/base_teleop/test/: test_teleop_integration.py
lazytatzv_ws/src/bringup/robot_bringup/: CMakeLists.txt  package.xml
lazytatzv_ws/src/bringup/robot_bringup/config/: actuators_ddsm.yaml  actuators_robstride.yaml  fastdds_config.xml  lifecycle.yaml  physical.yaml  teleop.yaml
lazytatzv_ws/src/bringup/robot_bringup/launch/: robot_bringup.launch.py
lazytatzv_ws/src/drivers/actuators/robstride_driver/: CMakeLists.txt  package.xml
lazytatzv_ws/src/drivers/actuators/robstride_driver/include/robstride_driver/: at_protocol.hpp  robstride_at_node.hpp  robstride_can_node.hpp  robstride_motor_node.hpp
lazytatzv_ws/src/drivers/actuators/robstride_driver/src/: robstride_at_node.cpp  robstride_can_node.cpp  robstride_motor_node.cpp
lazytatzv_ws/src/drivers/actuators/robstride_driver/test/: test_protocol.cpp
lazytatzv_ws/src/drivers/actuators/virtual_actuator/: CMakeLists.txt  package.xml
lazytatzv_ws/src/drivers/actuators/virtual_actuator/src/: virtual_actuator_node.cpp
lazytatzv_ws/src/drivers/communication/serial_gateway/: CMakeLists.txt  package.xml
lazytatzv_ws/src/drivers/communication/serial_gateway/include/serial_gateway/: serial_gateway.hpp
lazytatzv_ws/src/drivers/communication/serial_gateway/src/: serial_gateway.cpp
lazytatzv_ws/src/interfaces/robot_interfaces/: CMakeLists.txt  package.xml
lazytatzv_ws/src/logic/mecanum_kinematics/: CMakeLists.txt  package.xml
lazytatzv_ws/src/logic/mecanum_kinematics/include/mecanum_kinematics/: kinematics.hpp  mecanum_kinematics_node.hpp  wheel_speeds_dispatcher.hpp
lazytatzv_ws/src/logic/mecanum_kinematics/src/: kinematics.cpp  mecanum_kinematics_node.cpp  wheel_speeds_dispatcher.cpp
lazytatzv_ws/src/logic/mecanum_kinematics/test/: test_kinematics.cpp
lazytatzv_ws/src/mecanum_kinematics/: CMakeLists.txt  package.xml
lazytatzv_ws/src/mecanum_kinematics/include/mecanum_kinematics/: kinematics.hpp  mecanum_kinematics_node.hpp  wheel_speeds_dispatcher.hpp
lazytatzv_ws/src/mecanum_kinematics/src/: kinematics.cpp  mecanum_kinematics_node.cpp  wheel_speeds_dispatcher.cpp
lazytatzv_ws/src/mecanum_kinematics/test/: test_kinematics.cpp
lazytatzv_ws/src/motor_controller/src/: motor_controller.cpp
lazytatzv_ws/src/motor_driver/: CMakeLists.txt  package.xml
lazytatzv_ws/src/motor_driver/include/motor_driver/: at_protocol.hpp  ddsm_motor_node.hpp  ddsm_protocol.hpp  motor_controller.hpp  robstride_motor_node.hpp  serial_gateway.hpp
lazytatzv_ws/src/motor_driver/src/: ddsm_motor_node.cpp  motor_controller.cpp  serial_gateway.cpp
lazytatzv_ws/src/motor_driver/test/: test_protocol.cpp
lazytatzv_ws/src/robot_bringup/: package.xml
lazytatzv_ws/src/robot_bringup/config/: actuators.yaml  actuators_ddsm.yaml  actuators_robstride.yaml  lifecycle.yaml  physical.yaml  robot_params.yaml  teleop.yaml  twist_mux.yaml
lazytatzv_ws/src/robot_bringup/launch/: motor_test.launch.py  robot_bringup.launch.py  system_pro.launch.py
lazytatzv_ws/src/robot_bringup/urdf/: robot.urdf
lazytatzv_ws/src/robot_interfaces/: CMakeLists.txt
lazytatzv_ws/src/robot_interfaces/msg/: AtFrame.msg  WheelSpeeds.msg
lazytatzv_ws/src/robstride_driver/: CMakeLists.txt  package.xml
lazytatzv_ws/src/robstride_driver/include/robstride_driver/: robstride_motor_node.hpp
lazytatzv_ws/src/robstride_driver/src/: robstride_motor_node.cpp
lazytatzv_ws/src/serial_gateway/: CMakeLists.txt  package.xml
lazytatzv_ws/src/serial_gateway/include/serial_gateway/: serial_gateway.hpp
lazytatzv_ws/src/serial_gateway/src/: serial_gateway.cpp
lazytatzv_ws/src/teleop/base_teleop/: CMakeLists.txt  README.md  package.xml
lazytatzv_ws/src/teleop/base_teleop/include/base_teleop/: base_teleop_node.hpp
lazytatzv_ws/src/teleop/base_teleop/src/: base_teleop_node.cpp
lazytatzv_ws/src/teleop/base_teleop/test/: test_teleop_integration.py
