<?xml version="1.0"?>
<package format="3">
  <name>at_motor_driver</name>
  <version>0.0.1</version>
  <description>Serial AT driver for ROX2026 motors</description>
  <maintainer email="tatsukiyano@example.com">tatsukiyano</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>robot_interfaces</depend>
  <depend>rcl_interfaces</depend>
  <build_depend>ament_lint_auto</build_depend>
  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
