<?xml version="1.0"?>
<package format="3">
  <name>robot_bringup</name>
  <version>0.0.1</version>
  <description>Bringup launch files for ROX2026</description>
  <maintainer email="tatsukiyano@example.com">tatsukiyano</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joy</exec_depend>
  <exec_depend>twist_mux</exec_depend>
  <exec_depend>base_teleop</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>foxglove_bridge</exec_depend>
  <exec_depend>mecanum_kinematics</exec_depend>
  <exec_depend>at_motor_driver</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
