<?xml version="1.0"?>
<package format="3">
  <name>mecanum_kinematics</name>
  <version>0.0.1</version>
  <description>Mecanum kinematics controller for ROX2026</description>
  <maintainer email="tatsukiyano@example.com">tatsukiyano</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rclcpp_components</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>robot_interfaces</depend>
  <depend>rcl_interfaces</depend>
  <depend>diagnostic_updater</depend>
  <build_depend>ament_lint_auto</build_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
