<?xml version="1.0"?>
<package format="3">
  <name>base_teleop</name>
  <version>0.0.1</version>
  <description>DualSense teleop for ROX2026</description>
  <maintainer email="tatsukiyano@example.com">tatsukiyano</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
